refactor: Store 엔티티 수정 - 양방향 관계 설정 필드로 직접 PayMethod, OperatingDay 값을 넣도록 수정 - 점포 추가 메소드 로직 수정 (테스트 케이스도 수정) - 관련 Enum 분리